Issue #2871114 by Guietc, Leon Kessler, Bart Vanhoutte, oheller, jsheffers, SaytO: Support for Media Entity

--- a/field_group_background_image.info.yml
+++ b/field_group_background_image.info.yml
@@ -4,5 +4,5 @@ description: Field Group Background Image
 core: 8.x
 package: Fields
 dependencies:
-  - field
-  - field_group
+  - drupal:field
+  - drupal:field_group
